Unit description wrap text preference option

--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -97,6 +97,17 @@
                 </child>
                 <child>
                   <object class="AdwPreferencesGroup">
+                    <property name="title" translatable="yes" context="preference" comments="group">Unit Description</property>
+                    <child>
+                      <object class="AdwSwitchRow"  id="unit_description_wrap">
+                        <property name="subtitle" translatable="yes" context="preference" comments="subtitle">Wrap the unit description long text lines</property>
+                        <property name="title" translatable="yes" context="preference" comments="title">Wrap unit description text</property>                       
+                      </object>
+                    </child>                  
+                  </object>
+                </child>
+                 <child>
+                  <object class="AdwPreferencesGroup">
                     <property name="title" translatable="yes" context="preference" comments="group">Unit File</property>
                     <child>
                       <object class="AdwActionRow">
