--- a/data/interfaces/unit_file_panel.ui
+++ b/data/interfaces/unit_file_panel.ui
@@ -3,44 +3,10 @@
 <interface>
   <!-- interface-name unit_file_panel.ui -->
   <!-- interface-description Unit file panel -->
-  <requires lib="gtk" version="4.16"/>
-  <requires lib="libadwaita" version="1.6"/>
+  <requires lib="gtk" version="4.18"/>
+  <requires lib="libadwaita" version="1.7"/>
   <template class="UnitFilePanel" parent="GtkBox">
     <property name="orientation">vertical</property>
-    <child>
-      <object class="GtkBox">
-        <property name="margin-bottom">5</property>
-        <property name="margin-end">5</property>
-        <property name="margin-start">5</property>
-        <property name="margin-top">5</property>
-        <child>
-          <object class="GtkLabel">
-            <property name="label" translatable="yes" context="file" comments="label">File path:</property>
-            <property name="xalign">0.0</property>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLinkButton" id="file_link">
-            <property name="halign">start</property>
-            <property name="hexpand">True</property>
-            <property name="label">link</property>
-          </object>
-        </child>
-        <child>
-          <object class="GtkButton" id="save_button">
-            <property name="child">
-              <object class="AdwButtonContent">
-                <property name="halign">baseline-center</property>
-                <property name="icon-name">document-save</property>
-                <property name="label" translatable="yes" context="file" comments="button">Save</property>
-                <property name="valign">baseline-center</property>
-              </object>
-            </property>
-            <signal name="clicked" handler="save_file" swapped="yes"/>
-          </object>
-        </child>
-      </object>
-    </child>
     <child>
       <object class="AdwViewStack" id="panel_file_stack">
         <property name="vexpand">True</property>
@@ -48,9 +14,62 @@
         <child>
           <object class="AdwViewStackPage">
             <property name="child">
-              <object class="GtkScrolledWindow" id="unit_file_scrolled_window">
-                <property name="vexpand">True</property>
-                <property name="vexpand-set">True</property>
+              <object class="GtkBox">
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkBox">
+                    <child>
+                      <object class="AdwToggleGroup" id="file_dropin_selector">
+                        <child>
+                          <object class="AdwToggle">
+                            <property name="label">Unit File</property>
+                            <property name="name">file</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkScrolledWindow" id="unit_file_scrolled_window">
+                    <property name="vexpand">True</property>
+                    <property name="vexpand-set">True</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkBox">
+                    <property name="margin-bottom">5</property>
+                    <property name="margin-end">5</property>
+                    <property name="margin-start">5</property>
+                    <property name="margin-top">5</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="label" translatable="yes" context="file" comments="label">File path:</property>
+                        <property name="xalign">0.0</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkLinkButton" id="file_link">
+                        <property name="halign">start</property>
+                        <property name="hexpand">True</property>
+                        <property name="label">link</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="save_button">
+                        <property name="child">
+                          <object class="AdwButtonContent">
+                            <property name="halign">baseline-center</property>
+                            <property name="icon-name">document-save</property>
+                            <property name="label" translatable="yes" context="file" comments="button">Save</property>
+                            <property name="valign">baseline-center</property>
+                          </object>
+                        </property>
+                        <signal name="clicked" handler="save_file" swapped="yes"/>
+                      </object>
+                    </child>
+                  </object>
+                </child>
               </object>
             </property>
             <property name="name">file_panel</property>
