--- a/data/interfaces/unit_file_panel.ui
+++ b/data/interfaces/unit_file_panel.ui
@@ -5,6 +5,7 @@
   <!-- interface-description Unit file panel -->
   <requires lib="gtk" version="4.18"/>
   <requires lib="libadwaita" version="1.7"/>
+  <requires lib="gio" version="2.0"/>
   <template class="UnitFilePanel" parent="GtkBox">
     <property name="orientation">vertical</property>
     <child>
@@ -19,34 +20,15 @@
                 <child>
                   <object class="GtkBox">
                     <property name="margin-bottom">5</property>
+                    <property name="spacing">5</property>
                     <child>
                       <object class="AdwToggleGroup" id="file_dropin_selector">
                         <child>
                           <object class="AdwToggle">
-                            <property name="label" context="file" comments="Unit file / Drop-Ins selector">Unit File</property>
+                            <property name="label">Unit File</property>
                             <property name="name">file</property>
                           </object>
                         </child>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkScrolledWindow" id="unit_file_scrolled_window">
-                    <property name="vexpand">True</property>
-                    <property name="vexpand-set">True</property>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkBox">
-                    <property name="margin-bottom">5</property>
-                    <property name="margin-end">5</property>
-                    <property name="margin-start">5</property>
-                    <property name="margin-top">5</property>
-                    <child>
-                      <object class="GtkLabel">
-                        <property name="label" translatable="yes" context="file" comments="label">File path:</property>
-                        <property name="xalign">0.0</property>
                       </object>
                     </child>
                     <child>
@@ -54,6 +36,11 @@
                         <property name="halign">start</property>
                         <property name="hexpand">True</property>
                         <property name="label">link</property>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkMenuButton">
+                        <property name="menu-model">unit_file_menu</property>
                       </object>
                     </child>
                     <child>
@@ -69,6 +56,12 @@
                         <signal name="clicked" handler="save_file" swapped="yes"/>
                       </object>
                     </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkScrolledWindow" id="unit_file_scrolled_window">
+                    <property name="vexpand">True</property>
+                    <property name="vexpand-set">True</property>
                   </object>
                 </child>
               </object>
@@ -91,4 +84,12 @@
       </object>
     </child>
   </template>
+  <menu id="unit_file_menu">
+    <item>
+      <attribute name="label">Runtime Dropin</attribute>
+    </item>
+    <item>
+      <attribute name="label">Dropin</attribute>
+    </item>
+  </menu>
 </interface>
