--- a/data/interfaces/unit_file_panel.ui
+++ b/data/interfaces/unit_file_panel.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.96.1 -->
+<!-- Created with Cambalache 0.96.3 -->
 <interface>
   <!-- interface-name unit_file_panel.ui -->
   <!-- interface-description Unit file panel -->
@@ -40,8 +40,8 @@
                     </child>
                     <child>
                       <object class="GtkMenuButton">
+                        <property name="icon-name">open-menu-symbolic</property>
                         <property name="menu-model">unit_file_menu</property>
-                        <property name="visible">False</property>
                       </object>
                     </child>
                     <child>
@@ -93,16 +93,18 @@
         <attribute name="label">Runtime</attribute>
       </item>
       <item>
-        <attribute name="action">test_pizza</attribute>
+        <attribute name="action">win.create_drop_in_file_permanent</attribute>
         <attribute name="label">Permanent</attribute>
       </item>
     </submenu>
     <submenu>
       <attribute name="label">Revert</attribute>
       <item>
+        <attribute name="action">win.revert_unit_file_full</attribute>
         <attribute name="label">Full</attribute>
       </item>
       <item>
+        <attribute name="action">win.revert_drop_in_file_only</attribute>
         <attribute name="label">Drop-in Only</attribute>
       </item>
     </submenu>
