--- a/data/interfaces/unit_file_panel.ui
+++ b/data/interfaces/unit_file_panel.ui
@@ -20,6 +20,8 @@
                 <child>
                   <object class="GtkBox">
                     <property name="margin-bottom">5</property>
+                    <property name="margin-end">5</property>
+                    <property name="margin-start">5</property>
                     <property name="spacing">5</property>
                     <child>
                       <object class="AdwToggleGroup" id="file_dropin_selector">
