replace the side panel as popup

--- a/data/interfaces/unit_control_panel.ui
+++ b/data/interfaces/unit_control_panel.ui
@@ -105,7 +105,7 @@
               <object class="GtkMenuButton" id="show_more_button">
                 <property name="label">test</property>
                 <property name="popover">
-                  <object class="GtkPopover" id="side_overlay"/>
+                  <object class="GtkPopover" id="more_action_popover"/>
                 </property>
                 <property name="tooltip-text" translatable="yes"/>
                 <child>
