--- a/data/interfaces/text_find.ui
+++ b/data/interfaces/text_find.ui
@@ -3,7 +3,7 @@
 <interface>
   <!-- interface-name text_search.ui -->
   <requires lib="gtk" version="4.18"/>
-  <template class="TextSearch" parent="GtkBox">
+  <template class="TextFind" parent="GtkBox">
     <child>
       <object class="GtkSearchEntry" id="search_entry"/>
     </child>
@@ -12,13 +12,15 @@
         <property name="margin-end">5</property>
         <property name="margin-start">5</property>
         <child>
-          <object class="GtkToggleButton" id="case_sensitive_toggle">
+          <object class="GtkToggleButton" id="case_sensitive_toggle_button">
             <property name="icon-name">uppercase-symbolic</property>
+            <signal name="toggled" handler="on_case_sensitive_toggled" swapped="yes"/>
           </object>
         </child>
         <child>
-          <object class="GtkToggleButton" id="regex_toggle">
+          <object class="GtkToggleButton" id="regex_toggle_button">
             <property name="icon-name">regex-symbolic</property>
+            <signal name="toggled" handler="on_regex_toggled" swapped="yes"/>
           </object>
         </child>
       </object>
@@ -26,13 +28,15 @@
     <child>
       <object class="GtkBox">
         <child>
-          <object class="GtkButton">
+          <object class="GtkButton" id="previous_match_button">
             <property name="icon-name">go-up-symbolic</property>
+            <signal name="clicked" handler="on_previous_match_clicked" swapped="yes"/>
           </object>
         </child>
         <child>
-          <object class="GtkButton">
+          <object class="GtkButton" id="next_match_button">
             <property name="icon-name">go-down-symbolic</property>
+            <signal name="clicked" handler="on_next_match_clicked" swapped="yes"/>
           </object>
         </child>
       </object>
