--- a/data/interfaces/unit_info_panel.ui
+++ b/data/interfaces/unit_info_panel.ui
@@ -38,6 +38,12 @@
             </property>
           </object>
         </child>
+        <child>
+          <object class="GtkToggleButton" id="find_text_button">
+            <property name="icon-name">system-search-symbolic</property>
+            <property name="tooltip-text" translatable="yes">find text</property>
+          </object>
+        </child>
       </object>
     </child>
     <child>
@@ -57,11 +63,6 @@
     </child>
     <child>
       <object class="GtkSearchBar" id="text_search_bar">
-        <property name="child">
-          <object class="GtkLabel">
-            <property name="label">test</property>
-          </object>
-        </property>
         <property name="show-close-button">True</property>
       </object>
     </child>
