--- a/data/interfaces/text_find.ui
+++ b/data/interfaces/text_find.ui
@@ -20,12 +20,14 @@
         <child>
           <object class="GtkToggleButton" id="case_sensitive_toggle_button">
             <property name="icon-name">uppercase-symbolic</property>
+            <property name="tooltip-text" translatable="yes" context="find_text" comments="tooltip">Match Case</property>
             <signal name="toggled" handler="on_case_sensitive_toggled" swapped="yes"/>
           </object>
         </child>
         <child>
           <object class="GtkToggleButton" id="regex_toggle_button">
             <property name="icon-name">regex-symbolic</property>
+            <property name="tooltip-text" translatable="yes" context="find_text" comments="tooltip">Use Regular Expression</property>
             <signal name="toggled" handler="on_regex_toggled" swapped="yes"/>
           </object>
         </child>
@@ -45,6 +47,7 @@
           <object class="GtkButton" id="previous_match_button">
             <property name="icon-name">go-up-symbolic</property>
             <property name="sensitive">False</property>
+            <property name="tooltip-markup" translatable="yes" context="find_text" comments="tooltip">Previous Match</property>
             <signal name="clicked" handler="on_previous_match_clicked" swapped="yes"/>
           </object>
         </child>
@@ -52,6 +55,7 @@
           <object class="GtkButton" id="next_match_button">
             <property name="icon-name">go-down-symbolic</property>
             <property name="sensitive">False</property>
+            <property name="tooltip-text" translatable="yes" context="find_text">Match Next</property>
             <signal name="clicked" handler="on_next_match_clicked" swapped="yes"/>
           </object>
         </child>
