--- a/data/interfaces/unit_pop_menu.ui
+++ b/data/interfaces/unit_pop_menu.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.96.1 -->
+<!-- Created with Cambalache 0.96.3 -->
 <interface>
   <!-- interface-name unit_pop_menu.ui -->
   <requires lib="gtk" version="4.18"/>
@@ -115,7 +115,7 @@
           <object class="GtkSeparator"/>
         </child>
         <child>
-          <object class="GtkButton" id="relaod_button">
+          <object class="GtkButton" id="reload_button">
             <property name="css-classes">flat</property>
             <signal name="clicked" handler="reload_button_clicked" swapped="yes"/>
             <child>
@@ -126,6 +126,16 @@
                 <property name="label" translatable="yes" context="controls" comments="unit popup menu">Reload</property>
               </object>
             </child>
+          </object>
+        </child>
+        <child>
+          <object class="GtkSeparator"/>
+        </child>
+        <child>
+          <object class="GtkButton" id="totals_summary_button">
+            <property name="css-classes">flat</property>
+            <property name="label" translatable="yes" context="controls" comments="unit list pop up menu item">Toggle Totals Summary</property>
+            <signal name="clicked" handler="totals_summary_clicked" swapped="yes"/>
           </object>
         </child>
       </object>
