--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -14,7 +14,7 @@ You can set the application's Dbus level to &lt;u&gt;System&lt;/u&gt; if you wan
             <property name="use-markup">True</property>
           </object>
         </property>
-        <property name="description">This is Main</property>
+        <property name="icon-name">preferences-system-symbolic</property>
         <property name="name">main</property>
         <property name="title">Main</property>
         <child>
@@ -181,17 +181,21 @@ You can set the application's Dbus level to &lt;u&gt;System&lt;/u&gt; if you wan
       </object>
     </child>
     <child>
-      <object class="AdwPreferencesPage">
+      <object class="AdwPreferencesPage" id="pref_proxy_page">
         <property name="banner">
-          <object class="AdwBanner"/>
+          <object class="AdwBanner" id="proxy_banner">
+            <property name="title">Flatpak version can't use a Proxy </property>
+          </object>
         </property>
-        <property name="description">Proxy config</property>
+        <property name="icon-name">preferences-system-network-proxy-symbolic</property>
         <property name="name">proxy</property>
-        <property name="title">Proxy Config</property>
+        <property name="title" translatable="yes" context="preference">_Proxy Configuration</property>
+        <property name="use-underline">True</property>
         <child>
           <object class="AdwPreferencesGroup">
             <child>
               <object class="AdwSwitchRow" id="proxy_all_switch">
+                <property name="subtitle" translatable="yes">Switch that controls other switches</property>
                 <property name="title">All</property>
               </object>
             </child>
@@ -202,16 +206,19 @@ You can set the application's Dbus level to &lt;u&gt;System&lt;/u&gt; if you wan
             <property name="title">SystemD Manager Calls</property>
             <child>
               <object class="AdwSwitchRow" id="proxy_clean_switch">
+                <property name="subtitle">Clean method call through proxy</property>
                 <property name="title" translatable="yes" context="preference">Clean</property>
               </object>
             </child>
             <child>
               <object class="AdwSwitchRow" id="proxy_freeze_switch">
+                <property name="subtitle">&lt;b&gt;Freeze&lt;/b&gt; method call through proxy</property>
                 <property name="title" translatable="yes" context="preference">Freeze</property>
               </object>
             </child>
             <child>
               <object class="AdwSwitchRow" id="proxy_thaw_switch">
+                <property name="subtitle">&lt;b&gt;Thaw&lt;/b&gt; method call through proxy</property>
                 <property name="title" translatable="yes" context="preference">Thaw</property>
               </object>
             </child>
@@ -222,11 +229,13 @@ You can set the application's Dbus level to &lt;u&gt;System&lt;/u&gt; if you wan
             <property name="title">Actions</property>
             <child>
               <object class="AdwSwitchRow" id="proxy_create_dropin_switch">
+                <property name="subtitle">Create a &lt;b&gt;Drop-in&lt;/b&gt; file through the proxy</property>
                 <property name="title" translatable="yes" context="preference">Create Drop-in</property>
               </object>
             </child>
             <child>
               <object class="AdwSwitchRow" id="proxy_save_file_switch">
+                <property name="subtitle">&lt;b&gt;Save file&lt;/b&gt; through the proxy</property>
                 <property name="title" translatable="yes" context="preference">Save file</property>
               </object>
             </child>
